# LearnOpenGL

./: CMakeLists.txt
include/: shader.h  stb_image.h
include/glm/: CMakeLists.txt  geometric.hpp
include/glm/detail/: setup.hpp  type_mat2x2.inl
res/: coordinate_systems.fs  coordinate_systems.vs  test.fs
src/: HelloOpenGL.cpp  HelloOpenGL.h  glad.c  main.cpp  stb_image.cpp
src/change/: BoxRotation.cpp  BoxRotation.h
src/coordinate/: CoordinateSystems.cpp  CoordinateSystems.h
src/test/: DesktopTest.cpp  DesktopTest.h
src/triangle/: Constant.h  MovingTriangle.cpp  MovingTriangle.h  TextureTriangle.cpp  TextureTriangle.h  Triangle.cpp  Triangle.h  TwoTriangle.cpp  TwoTriangle.h
